--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>modal project</h1>
+    <!-- hero -->
+    <header class="hero">
+      <div class="banner">
+        <h1>modal project</h1>
+        <button class="btn open-modal">open modal</button>
+      </div>
+    </header>
+    <!-- end of hero  -->
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
