--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
       </div>
     </header>
     <!-- end of hero  -->
+    <!-- modal  -->
+    <div class="modal-overlay">
+      <div class="modal-container">
+        
+      </div>
+    </div>
+    <!-- end of modal  -->
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
